Use new expanded LogicalSortExpression in queries and index generation. (REL-736)
* Changes that rewrite wants to make to main

* Use new expanded LogicalSortExpression in queries and index generation.